--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
-
+.box{
+	background-color:lightblue;
+	margin:20px;
+	border:15px solid blue;
+	padding:50px;
+	width:300px;
+	
+	
+}
 /* Your CSS Code here. */
